# f_trendnewsbot

./: .env.example  .gitignore  CLAUDE.md  README.md  SETUP.md  pyproject.toml  setup.ps1
.claude/agents/: tnb-data-steward.md  tnb-docs-keeper.md  tnb-implementer.md  tnb-performance-investigator.md  tnb-phase-orchestrator.md  tnb-qa-reviewer.md  tnb-research-investigator.md  tnb-ui-specialist.md
.claude/commands/: design-review.md  new-feature.md  plan-phase.md  research.md  write-requirements.md
.github/workflows/: daily.yml
config/: filters.yml  recipients.example.yml  sources.yml
digest/: 2026-05-19.html  2026-05-20.html  2026-05-21.html  2026-05-22.html  2026-05-23.html  2026-05-24.html  2026-05-25.html  2026-05-27.html  2026-05-28.html
docs/: AGENT_READ_ORDER.md  DOC_GUIDE.md  DOC_MAP.md  PHASE_MAP.md  design_review_questions.md  implementation_status.md  팜보스_회사소개.md
docs/_extracted/: f251210폴더_파일명명규칙_통합공지.txt  f260120우리가 만들고 싶은 회사.txt  f260305수습직원_근무보고서_양식.txt  (+5 more)
phases/: index.json
prompts/: summarize.md
samples/: 2026-05-19-digest-preview-v2.html  2026-05-19-digest-preview-v3.html  2026-05-19-digest-preview-v4-from-render.html  2026-05-19-digest-preview.html  2026-05-19-telegram-message-v2.txt  2026-05-19-telegram-message.txt
scripts/: notify_telegram_push.ps1  render_sample_v4.py  validate_agent_profiles.ps1  validate_doc_status.ps1
src/: run_daily.py
tests/: test_config_loader.py  test_dispatchers.py  test_fetchers.py  test_filters.py  test_history.py  test_logging_setup.py  test_summarizer.py  test_time_helper.py  test_url_helper.py
(+116 files in other folders)
